# warmy

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml
examples/toml/: hello.toml  main.rs
src/: async.rs  context.rs  discovery.rs  json.rs  key.rs  lib.rs  load.rs  methods.rs  res.rs  ron.rs  source.rs  store_opt.rs  toml.rs  toml_impl.rs
tests/: lib.rs  utils.rs
