[package]
name = "warmy"
version = "0.12.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Hot-reloading loadable and reloadable resources"
keywords = ["hot-reloading", "resources"]
categories = ["caching", "filesystem"]
homepage = "https://github.com/phaazon/warmy"
repository = "https://github.com/phaazon/warmy"
documentation = "https://docs.rs/warmy"
readme = "README.md"

edition = "2018"

[badges]
travis-ci = { repository = "phaazon/warmy", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/warmy" }
is-it-maintained-open-issues = { repository = "phaazon/warmy" }
maintenance = { status = "actively-developed" }

[features]
default = ["json"]
arc = []
json = ["serde", "serde_json"]
ron-impl = ["serde", "ron"]
toml-impl = ["serde", "toml"]

[dependencies]
any-cache = "0.2"
notify = "4.0.3"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
ron = { version = "0.5", optional = true }
toml = { version = "0.5.1", optional = true }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "toml"
required-features = ["toml-impl"]
